# MiniDisc-Labels-Batch-App

./: pyproject.toml
src/: create_md_labels_batch.py  minidisc_labels_batch_app.py  models.py
